# elorus-python-sdk

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
.devcontainer/: devcontainer.json
.github/: ci.yml  publish.yml
.github/workflows/: publish.yml
elorus/: auth.py  client.py  exceptions.py  models.py  typings.py
