[tool.poetry]
name = "elorus"
version = "0.1.1"
description = ""
authors = ["Oluwafemi Adenuga <femi@withlogic.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
